# maestra

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  automl.py  benchmark.jsonl  bike_metric_ablation.jsonl  cleaning.py  cleaning_benchmark.jsonl  detection_benchmark.jsonl  llm.py  profiling.py  pyproject.toml  requirements.txt  run.py  runs.jsonl  train.py
.claude/agents/: advisor.md
.github/workflows/: ci.yml  pages.yml
assets/: demo.sh  demo.tape
docs/: ARCHITECTURE.md  MCP.md  RESULTS.md  STRATEGY_NEW.md
docs/case_studies/: bike_sharing.md
docs/examples/: compare_quickstart.ipynb  index.html
docs/examples/demo/: README.md  SCRIPT.md
docs/examples/reports/: bike-sharing.html  grunfeld.html  house-prices.html  rossmann-backtest-audit.html
scripts/: backtest_audit_battery.py  bike_sharing_fold_metric_ablation.py  build_example_reports.py  cleaning_robustness_benchmark.py  group_leakage_experiment.py  kaggle_battery.py  ordinal_encoding_experiment.py  real_group_leakage_experiment.py  skeptic_probe_experiment.py  strategist_detection_benchmark.py  task_battery.py  time_leakage_experiment.py  time_local_experiment.py
src/automl_agent/: __init__.py  cleaning.py  cli.py  diagnosis.py  engine.py  llm.py  pipeline.py  profiling.py
src/maestra/: __init__.py  _sandbox_worker.py  audit.py  backtest_audit.py  benchmark.py  calibration.py  cleaning.py  cli.py  compare.py  config.py  diagnosis.py  dossier.py  encoding.py  engine.py  feature_engineering.py  hybrid_features.py  intervention.py  llm.py  mcp_server.py  mlebench_runner.py  pipeline.py  profiling.py  report.py  research.py  run_memory.py  runlog.py  skeptic.py  target_framing.py  text_features.py  validation.py  validation_strategist.py  websearch.py
tests/: test_audit.py  test_backtest_audit.py  test_benchmark.py  test_build_example_reports.py  test_calibration.py  test_cleaning.py  test_cli.py  test_compare.py  test_diagnosis.py  test_dossier.py  test_encoding.py  test_engine.py  test_feature_engineering.py  test_hybrid_features.py  test_intervention.py  test_llm.py  test_mcp_server.py  test_mlebench_runner.py  test_pipeline.py  test_profiling.py  test_public_api.py  test_report.py  test_research.py  test_run_memory.py  test_runlog.py  test_skeptic.py  test_target_framing.py  test_text_features.py  test_validation.py  test_validation_strategist.py  test_websearch.py
