[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestra"
version = "0.1.0"
description = "An LLM conductor over AutoGluon for tabular AutoML on CSV data."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "MIT"
authors = [{ name = "Helena Schulz" }]
keywords = ["automl", "autogluon", "llm", "litellm", "agentic", "tabular"]
dependencies = [
    "autogluon.tabular[all]",
    "pandas",
    "litellm",
]

[project.optional-dependencies]
dev = ["pytest"]
# Web research (maestra.websearch / maestra.research). Kept as a separate optional group
# so the core install stays lean and these network deps don't collide with other changes.
research = ["httpx", "ddgs", "trafilatura"]

[project.scripts]
maestra = "maestra.cli:main"
maestra-bench = "maestra.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
