[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestra"
version = "0.1.0"
description = "An LLM conductor over AutoGluon for tabular AutoML on CSV data."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "MIT"
authors = [{ name = "Helena Schulz" }]
keywords = ["automl", "autogluon", "llm", "litellm", "agentic", "tabular"]
# Lower bounds only (not hard pins): this is a library-style project, and these are the oldest
# versions the code is known to work with. A fresh install stays reproducible without freezing
# users onto a lockfile.
dependencies = [
    "autogluon.tabular[all]>=1.0",
    "pandas>=2.0",
    "litellm>=1.40",
    # LiteLLM lazily imports tenacity only on its retry path (we set num_retries),
    # so it isn't pulled in transitively — declare it explicitly.
    "tenacity>=8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
# Web research (maestra.websearch / maestra.research). Kept as a separate optional group
# so the core install stays lean and these network deps don't collide with other changes.
research = ["httpx", "ddgs", "trafilatura"]
# MLE-bench grading. Heavy (Docker + competition data); pulled from git. Reached only via
# maestra.mlebench_runner.grade_submission, which raises a clear error when absent.
mlebench = ["mle-bench @ git+https://github.com/openai/mle-bench.git"]

[project.scripts]
maestra = "maestra.cli:main"
maestra-audit = "maestra.audit:main"
maestra-bench = "maestra.benchmark:main"
maestra-mlebench = "maestra.mlebench_runner:main"

[tool.hatch.metadata]
allow-direct-references = true  # the optional mlebench group pulls mle-bench from git

[tool.hatch.build.targets.wheel]
packages = ["src/maestra"]

[tool.pytest.ini_options]
testpaths = ["tests"]
